--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style/css/normalize.css">
-        <script src="https://kit.fontawesome.com/864947ab41.js" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/a80fc8ce44.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css" integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
         <link rel="stylesheet" href="style/css/main.css">
         <title>Ohmyfood!</title>
@@ -81,11 +81,11 @@
                                 Ménilmontant
                             </p>
                             </div>
-                            <i class="icon fa-regular fa-heart"></i>
-                            <i class="icon icon--gradient fa-solid fa-heart"></i>
-                            <p class="restaurants__card--new">
+                            <i class="icon icon-heart fa-regular fa-heart"></i>
+                            <i class="icon icon-heart--gradient fa-solid fa-heart"></i>
+                            <div class="restaurants__card--new">
                                 Nouveau
-                            </p>
+                            </div>
                         </article>
                     </a>
                     <a href="lanoteenchantee.html">
@@ -99,11 +99,11 @@
                                 Charonne
                             </p>
                             </div>
-                            <i class="icon fa-regular fa-heart"></i>
-                            <i class="icon icon--gradient fa-solid fa-heart"></i>
-                            <p class="restaurants__card--new">
+                            <i class="icon-heart fa-regular fa-heart"></i>
+                            <i class="icon icon-heart--gradient fa-solid fa-heart"></i>
+                            <div class="restaurants__card--new">
                                 Nouveau
-                            </p>
+                            </div>
                         </article>
                     </a>    
                     <a href="alafrancaise.html">
@@ -117,8 +117,8 @@
                                 Cité Rouge
                             </p>
                             </div>
-                            <i class="icon fa-regular fa-heart"></i>
-                            <i class="icon icon--gradient fa-solid fa-heart"></i>
+                            <i class="icon-heart fa-regular fa-heart"></i>
+                            <i class="icon icon-heart--gradient fa-solid fa-heart"></i>
                         </article>
                     </a>
                     <a href="ledelicedessens.html">
@@ -132,8 +132,8 @@
                                 Folie-Méricourt
                             </p>
                             </div>
-                            <i class="icon fa-regular fa-heart"></i>
-                            <i class="icon icon--gradient fa-solid fa-heart"></i>
+                            <i class="icon-heart fa-regular fa-heart"></i>
+                            <i class="icon icon-heart--gradient fa-solid fa-heart"></i>
                         </article>
                     </a>
                 </div>
