--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="style/css/normalize.css">
-		<script src="https://kit.fontawesome.com/864947ab41.js" crossorigin="anonymous"></script>
+		<script src="https://kit.fontawesome.com/a80fc8ce44.js" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css" integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
 		<link rel="stylesheet" href="style/css/main.css">
 		<title>Ohmyfood!</title>
@@ -19,7 +19,8 @@
 			<section class="repas">
 				<div class="repas__titre">
 			<h1>Le délice des sens</h1>
-			<i class="icon fa-regular fa-heart"></i>
+			<i class="icon-heart fa-regular fa-heart"></i>
+			<i class="icon icon-heart--gradient fa-solid fa-heart"></i>
 				</div>
 			<h4 class="repas__categorie">ENTRÉES</h4>
 			<div class="repas__container">
