Fonctionnement : ajout lien + changement de couleur icône

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     Fonctionnement
                 </h2>
                 <div class="fonctionnement__container">
+                    <a href="#">
                     <article class="fonctionnement__card">
                         <p>
                             1
@@ -45,6 +46,8 @@
                             Choisissez un restaurant
                         </h3>
                     </article>
+                    </a>
+                    <a href="#">
                     <article class="fonctionnement__card">
                         <p>
                             2
@@ -54,6 +57,8 @@
                             Composez votre menu
                         </h3>
                     </article>
+                    </a>
+                    <a href="#">
                     <article class="fonctionnement__card">
                         <p>
                             3
@@ -63,6 +68,7 @@
                             Dégustez au restaurant
                         </h3>
                     </article>
+                    </a>
                 </div>
             </section>
             <section class="restaurants">
