Ajout de l'animation d'arrivée cards menu

--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -24,7 +24,7 @@
                 </div>
 			<h4 class="repas__categorie">ENTRÉES</h4>
 			<div class="repas__container">
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--1">
 					<h2>Ravioles de foie gras</h2>
 					<p>
 						Accompagnés de leur crème à la truffe
@@ -33,7 +33,7 @@
 						25€
 					</p>
 				</article>
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--2">
 					<h2>Caviar osciètre</h2>
 					<p>
 						Sur blini à la farine de blé noir
@@ -42,7 +42,7 @@
 						35€
 					</p>
 				</article>
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--3">
 					<h2>Homard et espuma de potiron</h2>
 					<p>
 						Mariné aux zestes d'orange
@@ -51,7 +51,7 @@
 						20€
 					</p>
 				</article>
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--4">
 					<h2>Foie gras de canard cuit entier</h2>
 					<p>
 						Confiture de figue et pain toasté
@@ -63,7 +63,7 @@
 			</div>
 			<h4 class="repas__categorie">PLATS</h4>
 			<div class="repas__container">
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--5">
 					<h2>Noix de coquilles Saint-Jacques</h2>
 					<p>
 						Sur lit de purée de céleri-rave
@@ -72,7 +72,7 @@
 						40€
 					</p>
 				</article>
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--6">
 					<h2>Langoustine poêlée</h2>
 					<p>
 						Purée de patate douce
@@ -81,7 +81,7 @@
 						35€
 					</p>
 				</article>
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--7">
 					<h2>Mijoté de queue de boeuf</h2>
 					<p>
 						Et riz sauvage aux zestes de citron
@@ -93,7 +93,7 @@
 			</div>
 			<h4 class="repas__categorie">DESSERTS</h4>
 			<div class="repas__container">
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--8">
 					<h2>Macaron noisette et chocolat</h2>
 					<p>
 						Glace au caramel brun et sel de Guérande
@@ -102,7 +102,7 @@
 						18€
 					</p>
 				</article>
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--9">
 					<h2>Baba au rhum revisité</h2>
 					<p>
 						Avec son coulis de citron
@@ -111,7 +111,7 @@
 						22€
 					</p>
 				</article>
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--10">
 					<h2>Tarte au citron meringuée</h2>
 					<p>
 						Déstructurée
