--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -24,7 +24,7 @@
 				</div>
 			<h4 class="repas__categorie">ENTRÉES</h4>
 			<div class="repas__container">
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--1">
 					<h2>Tartare de thon</h2>
 					<p>
 						Assaisonné au yuzu
@@ -33,7 +33,7 @@
 						25€
 					</p>
 				</article>
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--2">
 					<h2>Bouchée de homard croustillant</h2>
 					<p>
 						Et sa farandole de petits légumes
@@ -42,7 +42,7 @@
 						35€
 					</p>
 				</article>
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--3">
 					<h2>Velouté de cèpes</h2>
 					<p>
 						Aux truffes
@@ -54,7 +54,7 @@
 			</div>
 			<h4 class="repas__categorie">PLATS</h4>
 			<div class="repas__container">
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--4">
 					<h2>Poulet rôti aux herbes de Provence</h2>
 					<p>
 						Et sa crème de truffe
@@ -63,7 +63,7 @@
 						40€
 					</p>
 				</article>
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--5">
 					<h2>Langouste rôtie</h2>
 					<p>
 						Et ses légumes de saison
@@ -72,7 +72,7 @@
 						35€
 					</p>
 				</article>
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--6">
 					<h2>Côte de boeuf Angus</h2>
 					<p>
 						Et sa purée de panais
@@ -84,7 +84,7 @@
 			</div>
 			<h4 class="repas__categorie">DESSERTS</h4>
 			<div class="repas__container">
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--7">
 					<h2>Farandole de desserts</h2>
 					<p>
 						Du chef
@@ -93,7 +93,7 @@
 						18€
 					</p>
 				</article>
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--8">
 					<h2>Crème brulée</h2>
 					<p>
 						Revisitée
@@ -102,7 +102,7 @@
 						22€
 					</p>
 				</article>
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--9">
 					<h2>Tiramisu</h2>
 					<p>
 						À la noisette
