--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -24,7 +24,7 @@
                 </div>
 			<h4 class="repas__categorie">ENTRÉES</h4>
 			<div class="repas__container">
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--1">
 					<h2>Tartare de poulpe acidulé</h2>
 					<p>
 						Aux zests d'orange
@@ -33,7 +33,7 @@
 						25€
 					</p>
 				</article>
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--2">
 					<h2>Velouté de légumes d'antan</h2>
 					<p>
 						Carotte, panais, topinambour
@@ -42,7 +42,7 @@
 						35€
 					</p>
 				</article>
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--3">
 					<h2>Soupe à l'oignon</h2>
 					<p>
 						Revisitée
@@ -54,7 +54,7 @@
 			</div>
 			<h4 class="repas__categorie">PLATS</h4>
 			<div class="repas__container">
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--4">
 					<h2>Coquilles Saint-Jacques</h2>
 					<p>
 						Accompagnées d'une purée de panais
@@ -63,7 +63,7 @@
 						40€
 					</p>
 				</article>
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--5">
 					<h2>Magret de canard</h2>
 					<p>
 						Et parmentier de pommes de terre
@@ -72,7 +72,7 @@
 						35€
 					</p>
 				</article>
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--6">
 					<h2>Pigeonneau d’Ille-et-Vilaine</h2>
 					<p>
 						Sur son lit de gnocchis aux légumes
@@ -84,7 +84,7 @@
 			</div>
 			<h4 class="repas__categorie">DESSERTS</h4>
 			<div class="repas__container">
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--7">
 					<h2>Pétales de violettes glacés</h2>
 					<p>
 						Et purée de noisettes
@@ -93,7 +93,7 @@
 						18€
 					</p>
 				</article>
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--8">
 					<h2>Fondant au chocolat</h2>
 					<p>
 						Revisité
@@ -102,7 +102,7 @@
 						22€
 					</p>
 				</article>
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--9">
 					<h2>Millefeuille croustillant</h2>
 					<p>
 						Myrtilles et pâte d’amande
