--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -24,7 +24,7 @@
 				</div>
 			<h4 class="repas__categorie">ENTRÉES</h4>
 			<div class="repas__container">
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--1">
 					<h2>Fricassée d'escargot</h2>
 					<p>
 						Au piment d'Espelette
@@ -33,7 +33,7 @@
 						25€
 					</p>
 				</article>
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--2">
 					<h2>Foie gras de canard mi-cuit</h2>
 					<p>
 						Et ses copeaux de truffe noire
@@ -42,7 +42,7 @@
 						35€
 					</p>
 				</article>
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--3">
 					<h2>Oeuf au plat</h2>
 					<p>
 						Assaisonné à la truffe sur lit de caviar
@@ -54,7 +54,7 @@
 			</div>
 			<h4 class="repas__categorie">PLATS</h4>
 			<div class="repas__container">
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--1">
 					<h2>Filet de boeuf aux herbes</h2>
 					<p>
 						Accompagné de sa ribambelle de légumes
@@ -63,7 +63,7 @@
 						40€
 					</p>
 				</article>
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--2">
 					<h2>Parmentier de queue de boeuf</h2>
 					<p>
 						À la truffe noire sur sa purée de panais
@@ -72,7 +72,7 @@
 						35€
 					</p>
 				</article>
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--3">
 					<h2>Filet de turbot</h2>
 					<p>
 						Aux agrumes
@@ -84,7 +84,7 @@
 			</div>
 			<h4 class="repas__categorie">DESSERTS</h4>
 			<div class="repas__container">
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--4">
 					<h2>Paris-Brest</h2>
 					<p>
 						Revisité
@@ -93,7 +93,7 @@
 						18€
 					</p>
 				</article>
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--5">
 					<h2>Macaron au chocolat d'exception</h2>
 					<p>
 						Et glace à la vanille de Madagascar
@@ -102,7 +102,7 @@
 						22€
 					</p>
 				</article>
-				<article class="repas__plat">
+				<article class="repas__plat repas__plat--6">
 					<h2>Mousse au chocolat</h2>
 					<p>
 						Au piment d'Espelette et à la truffe noire
