--- a/index.html
+++ b/index.html
@@ -1,42 +1,49 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style/css/normalize.css">
-        <script src="https://kit.fontawesome.com/a80fc8ce44.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css" integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
-        <link rel="stylesheet" href="style/css/main.css">
-        <title>Ohmyfood!</title>
-    </head>
-    <body>
-        <header class="header">
-            <img src="images/logo/ohmyfood.png" alt="logo_ohmyfood" class="logo">
-        </header>
-        <main>
-            <div id="localisation">
-                <i class="icon fa-solid fa-location-dot"></i>
-                <p>
-                    Paris, Belleville
-                </p>
-            </div>
-            <section id="description_ohmyfood">
-                <h2>
-                    Réservez le menu qui vous convient
-                </h2>
-                <p>
-                    Découvrez des restaurants d'exception, sélectionnés par nos soins.
-                </p>
-                <button type="button">
-                    Explorer nos restaurants
-                </button>
-            </section>    
-            <section class="fonctionnement">
-                <h2>
-                    Fonctionnement
-                </h2>
-                <div class="fonctionnement__container">
-                    <a href="#">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/css/normalize.css">
+    <script src="https://kit.fontawesome.com/a80fc8ce44.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css"
+        integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
+    <link rel="stylesheet" href="style/css/main.css">
+    <title>Ohmyfood!</title>
+</head>
+
+<body>
+    <div class="loader__container">
+        <div class="loader"></div>
+    </div>
+    <header class="header">
+        <img src="images/logo/ohmyfood.png" alt="logo_ohmyfood" class="logo">
+    </header>
+    <main>
+        <div id="localisation">
+            <i class="icon fa-solid fa-location-dot"></i>
+            <p>
+                Paris, Belleville
+            </p>
+        </div>
+        <section id="description_ohmyfood">
+            <h2>
+                Réservez le menu qui vous convient
+            </h2>
+            <p>
+                Découvrez des restaurants d'exception, sélectionnés par nos soins.
+            </p>
+            <button type="button">
+                Explorer nos restaurants
+            </button>
+        </section>
+        <section class="fonctionnement">
+            <h2>
+                Fonctionnement
+            </h2>
+            <div class="fonctionnement__container">
+                <a href="#">
                     <article class="fonctionnement__card">
                         <p>
                             1
@@ -46,8 +53,8 @@
                             Choisissez un restaurant
                         </h3>
                     </article>
-                    </a>
-                    <a href="#">
+                </a>
+                <a href="#">
                     <article class="fonctionnement__card">
                         <p>
                             2
@@ -57,8 +64,8 @@
                             Composez votre menu
                         </h3>
                     </article>
-                    </a>
-                    <a href="#">
+                </a>
+                <a href="#">
                     <article class="fonctionnement__card">
                         <p>
                             3
@@ -68,93 +75,96 @@
                             Dégustez au restaurant
                         </h3>
                     </article>
-                    </a>
-                </div>
-            </section>
-            <section class="restaurants">
-                <h2>
-                    Restaurants
-                </h2>
-                <div class="restaurants__container">  
-                    <a href="lapalettedugout.html">
-                        <article class="restaurants__card">
-                            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="plat_la_palette_du_gout">
-                            <div class="restaurants__card--txt">
+                </a>
+            </div>
+        </section>
+        <section class="restaurants">
+            <h2>
+                Restaurants
+            </h2>
+            <div class="restaurants__container">
+                <a href="lapalettedugout.html">
+                    <article class="restaurants__card">
+                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                            alt="plat_la_palette_du_gout">
+                        <div class="restaurants__card--txt">
                             <h3>
                                 La palette du goût
                             </h3>
                             <p>
                                 Ménilmontant
                             </p>
-                            </div>
-                            <i class="icon icon-heart fa-regular fa-heart"></i>
-                            <i class="icon icon-heart--gradient fa-solid fa-heart"></i>
-                            <div class="restaurants__card--new">
-                                Nouveau
-                            </div>
-                        </article>
-                    </a>
-                    <a href="lanoteenchantee.html">
-                        <article class="restaurants__card">
-                            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="plat_la_note_enchantee">
-                            <div class="restaurants__card--txt">
+                        </div>
+                        <i class="icon icon-heart fa-regular fa-heart"></i>
+                        <i class="icon icon-heart--gradient fa-solid fa-heart"></i>
+                        <div class="restaurants__card--new">
+                            Nouveau
+                        </div>
+                    </article>
+                </a>
+                <a href="lanoteenchantee.html">
+                    <article class="restaurants__card">
+                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="plat_la_note_enchantee">
+                        <div class="restaurants__card--txt">
                             <h3>
                                 La note enchantée
                             </h3>
                             <p>
                                 Charonne
                             </p>
-                            </div>
-                            <i class="icon-heart fa-regular fa-heart"></i>
-                            <i class="icon icon-heart--gradient fa-solid fa-heart"></i>
-                            <div class="restaurants__card--new">
-                                Nouveau
-                            </div>
-                        </article>
-                    </a>    
-                    <a href="alafrancaise.html">
-                        <article class="restaurants__card">
-                            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="plat_a_la_francaise">
-                            <div class="restaurants__card--txt">
+                        </div>
+                        <i class="icon-heart fa-regular fa-heart"></i>
+                        <i class="icon icon-heart--gradient fa-solid fa-heart"></i>
+                        <div class="restaurants__card--new">
+                            Nouveau
+                        </div>
+                    </article>
+                </a>
+                <a href="alafrancaise.html">
+                    <article class="restaurants__card">
+                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="plat_a_la_francaise">
+                        <div class="restaurants__card--txt">
                             <h3>
                                 À la française
                             </h3>
                             <p>
                                 Cité Rouge
                             </p>
-                            </div>
-                            <i class="icon-heart fa-regular fa-heart"></i>
-                            <i class="icon icon-heart--gradient fa-solid fa-heart"></i>
-                        </article>
-                    </a>
-                    <a href="ledelicedessens.html">
-                        <article class="restaurants__card">
-                            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="plat_le_delice_des_sens">
-                            <div class="restaurants__card--txt">
+                        </div>
+                        <i class="icon-heart fa-regular fa-heart"></i>
+                        <i class="icon icon-heart--gradient fa-solid fa-heart"></i>
+                    </article>
+                </a>
+                <a href="ledelicedessens.html">
+                    <article class="restaurants__card">
+                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                            alt="plat_le_delice_des_sens">
+                        <div class="restaurants__card--txt">
                             <h3>
                                 Le délice des sens
                             </h3>
                             <p>
                                 Folie-Méricourt
                             </p>
-                            </div>
-                            <i class="icon-heart fa-regular fa-heart"></i>
-                            <i class="icon icon-heart--gradient fa-solid fa-heart"></i>
-                        </article>
-                    </a>
-                </div>
-            </section>
-        </main>
-        <footer>
-            <h1>
-                ohmyfood
-            </h1>
-            <ul>
-                <li><i class="icon fa-solid fa-utensils"></i>Proposer un restaurant</li>
-                <li><i class="icon fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
-                <li>Mentions légales</li>
-                <li><a href="mailto:">Contact</a></li>
-            </ul>            
-        </footer>
-    </body>
+                        </div>
+                        <i class="icon-heart fa-regular fa-heart"></i>
+                        <i class="icon icon-heart--gradient fa-solid fa-heart"></i>
+                    </article>
+                </a>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <h1>
+            ohmyfood
+        </h1>
+        <ul>
+            <li><i class="icon fa-solid fa-utensils"></i>Proposer un restaurant</li>
+            <li><i class="icon fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
+            <li>Mentions légales</li>
+            <li><a href="mailto:">Contact</a></li>
+        </ul>
+    </footer>
+</body>
+
 </html>
