--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <img src="images/logo/ohmyfood.png" alt="logo_ohmyfood" class="logo">
     </header>
     <main>
-        <div id="localisation">
+        <div class="localisation">
             <i class="icon fa-solid fa-location-dot"></i>
-            <p>
-                Paris, Belleville
-            </p>
+            <form action="">
+                <input type="text" placeholder="Paris, Belleville" class="localisation__form">
+            </form>
         </div>
         <div class="container_description_fonctionnement">
             <section id="description_ohmyfood">
