--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -1,128 +1,141 @@
 <!DOCTYPE html>
 <html lang="fr">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="style/css/normalize.css">
-		<script src="https://kit.fontawesome.com/a80fc8ce44.js" crossorigin="anonymous"></script>
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css" integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
-		<link rel="stylesheet" href="style/css/main.css">
-		<title>Ohmyfood!</title>
-	</head>
-	<body>
-		<header>
-			<a href="index.html"><i class="icon fa-solid fa-arrow-left"></i></a>
-			<img src="images/logo/ohmyfood.png" alt="logo_ohmyfood" class="logo">
-		</header>
-		<main class="menu">
-			<img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="plat_le_delice_des_sens">
-			<section class="repas">
-				<div class="repas__titre">
-			<h1>Le délice des sens</h1>
-			<i class="icon-heart fa-regular fa-heart"></i>
-			<i class="icon icon-heart--gradient fa-solid fa-heart"></i>
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style/css/normalize.css">
+	<script src="https://kit.fontawesome.com/a80fc8ce44.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet"
+		href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css"
+		integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
+	<link rel="stylesheet" href="style/css/main.css">
+	<title>Ohmyfood!</title>
+</head>
+
+<body>
+	<header>
+		<a href="index.html"><i class="icon fa-solid fa-arrow-left"></i></a>
+		<img src="images/logo/ohmyfood.png" alt="logo_ohmyfood" class="logo">
+	</header>
+	<main class="menu">
+		<img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="plat_le_delice_des_sens">
+		<section class="repas">
+			<div class="repas__titre">
+				<h1>Le délice des sens</h1>
+				<i class="icon-heart fa-regular fa-heart"></i>
+				<i class="icon icon-heart--gradient fa-solid fa-heart"></i>
+			</div>
+			<div class="repas__container_all">
+				<div class="repas__container--withtitles">
+					<h4 class="repas__categorie_plat">ENTRÉES</h4>
+					<div class="repas__container">
+						<article class="repas__card repas__card--1">
+							<h2>Tartare de thon</h2>
+							<p>
+								Assaisonné au yuzu
+							</p>
+							<div class="repas__card__prix">
+								25€
+							</div>
+						</article>
+						<article class="repas__card repas__card--2">
+							<h2>Bouchée de homard croustillant</h2>
+							<p>
+								Et sa farandole de petits légumes
+							</p>
+							<div class="repas__card__prix">
+								35€
+							</div>
+						</article>
+						<article class="repas__card repas__card--3">
+							<h2>Velouté de cèpes</h2>
+							<p>
+								Aux truffes
+							</p>
+							<div class="repas__card__prix">
+								20€
+							</div>
+						</article>
+					</div>
 				</div>
-			<h4 class="repas__categorie">ENTRÉES</h4>
-			<div class="repas__container">
-				<article class="repas__plat repas__plat--1">
-					<h2>Tartare de thon</h2>
-					<p>
-						Assaisonné au yuzu
-					</p>
-					<p class="repas__plat__prix">
-						25€
-					</p>
-				</article>
-				<article class="repas__plat repas__plat--2">
-					<h2>Bouchée de homard croustillant</h2>
-					<p>
-						Et sa farandole de petits légumes
-					</p>
-					<p class="repas__plat__prix">
-						35€
-					</p>
-				</article>
-				<article class="repas__plat repas__plat--3">
-					<h2>Velouté de cèpes</h2>
-					<p>
-						Aux truffes
-					</p>
-					<p class="repas__plat__prix">
-						20€
-					</p>
-				</article>
-			</div>
-			<h4 class="repas__categorie">PLATS</h4>
-			<div class="repas__container">
-				<article class="repas__plat repas__plat--4">
-					<h2>Poulet rôti aux herbes de Provence</h2>
-					<p>
-						Et sa crème de truffe
-					</p>
-					<p class="repas__plat__prix">
-						40€
-					</p>
-				</article>
-				<article class="repas__plat repas__plat--5">
-					<h2>Langouste rôtie</h2>
-					<p>
-						Et ses légumes de saison
-					</p>
-					<p class="repas__plat__prix">
-						35€
-					</p>
-				</article>
-				<article class="repas__plat repas__plat--6">
-					<h2>Côte de boeuf Angus</h2>
-					<p>
-						Et sa purée de panais
-					</p>
-					<p class="repas__plat__prix">
-						44€
-					</p>
-				</article>
-			</div>
-			<h4 class="repas__categorie">DESSERTS</h4>
-			<div class="repas__container">
-				<article class="repas__plat repas__plat--7">
-					<h2>Farandole de desserts</h2>
-					<p>
-						Du chef
-					</p>
-					<p class="repas__plat__prix">
-						18€
-					</p>
-				</article>
-				<article class="repas__plat repas__plat--8">
-					<h2>Crème brulée</h2>
-					<p>
-						Revisitée
-					</p>
-					<p class="repas__plat__prix">
-						22€
-					</p>
-				</article>
-				<article class="repas__plat repas__plat--9">
-					<h2>Tiramisu</h2>
-					<p>
-						À la noisette
-					</p>
-					<p class="repas__plat__prix">
-						23€
-					</p>
-				</article>
+				<div class="repas__container--withtitles">
+					<h4 class="repas__categorie_plat">PLATS</h4>
+					<div class="repas__container">
+						<article class="repas__card repas__card--4">
+							<h2>Poulet rôti aux herbes de Provence</h2>
+							<p>
+								Et sa crème de truffe
+							</p>
+							<div class="repas__card__prix">
+								40€
+							</div>
+						</article>
+						<article class="repas__card repas__card--5">
+							<h2>Langouste rôtie</h2>
+							<p>
+								Et ses légumes de saison
+							</p>
+							<div class="repas__card__prix">
+								35€
+							</div>
+						</article>
+						<article class="repas__card repas__card--6">
+							<h2>Côte de boeuf Angus</h2>
+							<p>
+								Et sa purée de panais
+							</p>
+							<div class="repas__card__prix">
+								44€
+							</div>
+						</article>
+					</div>
+				</div>
+				<div class="repas__container--withtitles">
+					<h4 class="repas__categorie_plat">DESSERTS</h4>
+					<div class="repas__container">
+						<article class="repas__card repas__card--7">
+							<h2>Farandole de desserts</h2>
+							<p>
+								Du chef
+							</p>
+							<div class="repas__card__prix">
+								18€
+							</div>
+						</article>
+						<article class="repas__card repas__card--8">
+							<h2>Crème brulée</h2>
+							<p>
+								Revisitée
+							</p>
+							<div class="repas__card__prix">
+								22€
+							</div>
+						</article>
+						<article class="repas__card repas__card--9">
+							<h2>Tiramisu</h2>
+							<p>
+								À la noisette
+							</p>
+							<div class="repas__card__prix">
+								23€
+							</div>
+						</article>
+					</div>
+				</div>
 			</div>
 			<button type="button">Commander</button>
-			</section>
-		</main>
-		<footer>
-			<h1>ohmyfood</h1>
-			<ul>
-				<li><i class="icon fa-solid fa-utensils"></i>Proposer un restaurant</li>
-				<li><i class="icon fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
-				<li>Mentions légales</li>
-				<li><a href="mailto:">Contact</a></li>
-			</ul>
-		</footer>
-	</body>
+		</section>
+	</main>
+	<footer>
+		<h1>ohmyfood</h1>
+		<ul>
+			<li><i class="icon fa-solid fa-utensils"></i>Proposer un restaurant</li>
+			<li><i class="icon fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
+			<li>Mentions légales</li>
+			<li><a href="mailto:">Contact</a></li>
+		</ul>
+	</footer>
+</body>
+
 </html>
