--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -1,137 +1,150 @@
 <!DOCTYPE html>
 <html lang="fr">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="style/css/normalize.css">
-		<script src="https://kit.fontawesome.com/a80fc8ce44.js" crossorigin="anonymous"></script>
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css" integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
-		<link rel="stylesheet" href="style/css/main.css">
-		<title>Ohmyfood!</title>
-	</head>
-	<body>
-		<header class="header__menus">
-			<a href="index.html"><i class="icon fa-solid fa-arrow-left"></i></a>
-			<img src="images/logo/ohmyfood.png" alt="logo_ohmyfood" class="logo">
-		</header>
-		<main class="menu">
-			<img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="plat_la_note_enchantee">
-            <section class="repas">
-                <div class="repas__titre">
-            <h1>La note enchantée</h1>
-			<i class="icon-heart fa-regular fa-heart"></i>
-			<i class="icon icon-heart--gradient fa-solid fa-heart"></i>
-                </div>
-			<h4 class="repas__categorie">ENTRÉES</h4>
-			<div class="repas__container">
-				<article class="repas__plat repas__plat--1">
-					<h2>Ravioles de foie gras</h2>
-					<p>
-						Accompagnés de leur crème à la truffe
-					</p>
-					<p class="repas__plat__prix">
-						25€
-					</p>
-				</article>
-				<article class="repas__plat repas__plat--2">
-					<h2>Caviar osciètre</h2>
-					<p>
-						Sur blini à la farine de blé noir
-					</p>
-					<p class="repas__plat__prix">
-						35€
-					</p>
-				</article>
-				<article class="repas__plat repas__plat--3">
-					<h2>Homard et espuma de potiron</h2>
-					<p>
-						Mariné aux zestes d'orange
-					</p>
-					<p class="repas__plat__prix">
-						20€
-					</p>
-				</article>
-				<article class="repas__plat repas__plat--4">
-					<h2>Foie gras de canard cuit entier</h2>
-					<p>
-						Confiture de figue et pain toasté
-					</p>
-					<p class="repas__plat__prix">
-						35€
-					</p>
-				</article>
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style/css/normalize.css">
+	<script src="https://kit.fontawesome.com/a80fc8ce44.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet"
+		href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css"
+		integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
+	<link rel="stylesheet" href="style/css/main.css">
+	<title>Ohmyfood!</title>
+</head>
+
+<body>
+	<header class="header__menus">
+		<a href="index.html"><i class="icon fa-solid fa-arrow-left"></i></a>
+		<img src="images/logo/ohmyfood.png" alt="logo_ohmyfood" class="logo">
+	</header>
+	<main class="menu">
+		<img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="plat_la_note_enchantee">
+		<section class="repas">
+			<div class="repas__titre">
+				<h1>La note enchantée</h1>
+				<i class="icon-heart fa-regular fa-heart"></i>
+				<i class="icon icon-heart--gradient fa-solid fa-heart"></i>
 			</div>
-			<h4 class="repas__categorie">PLATS</h4>
-			<div class="repas__container">
-				<article class="repas__plat repas__plat--5">
-					<h2>Noix de coquilles Saint-Jacques</h2>
-					<p>
-						Sur lit de purée de céleri-rave
-					</p>
-					<p class="repas__plat__prix">
-						40€
-					</p>
-				</article>
-				<article class="repas__plat repas__plat--6">
-					<h2>Langoustine poêlée</h2>
-					<p>
-						Purée de patate douce
-					</p>
-					<p class="repas__plat__prix">
-						35€
-					</p>
-				</article>
-				<article class="repas__plat repas__plat--7">
-					<h2>Mijoté de queue de boeuf</h2>
-					<p>
-						Et riz sauvage aux zestes de citron
-					</p>
-					<p class="repas__plat__prix">
-						44€
-					</p>
-				</article>
-			</div>
-			<h4 class="repas__categorie">DESSERTS</h4>
-			<div class="repas__container">
-				<article class="repas__plat repas__plat--8">
-					<h2>Macaron noisette et chocolat</h2>
-					<p>
-						Glace au caramel brun et sel de Guérande
-					</p>
-					<p class="repas__plat__prix">
-						18€
-					</p>
-				</article>
-				<article class="repas__plat repas__plat--9">
-					<h2>Baba au rhum revisité</h2>
-					<p>
-						Avec son coulis de citron
-					</p>
-					<p class="repas__plat__prix">
-						22€
-					</p>
-				</article>
-				<article class="repas__plat repas__plat--10">
-					<h2>Tarte au citron meringuée</h2>
-					<p>
-						Déstructurée
-					</p>
-					<p class="repas__plat__prix">
-						23€
-					</p>
-				</article>
+			<div class="repas__container_all">
+				<div class="repas__container--withtitles">
+					<h4 class="repas__categorie_plat">ENTRÉES</h4>
+					<div class="repas__container">
+						<article class="repas__card repas__card--1">
+							<h2>Ravioles de foie gras</h2>
+							<p>
+								Accompagnés de leur crème à la truffe
+							</p>
+							<div class="repas__card__prix">
+								25€
+							</div>
+						</article>
+						<article class="repas__card repas__card--2">
+							<h2>Caviar osciètre</h2>
+							<p>
+								Sur blini à la farine de blé noir
+							</p>
+							<div class="repas__card__prix">
+								35€
+							</div>
+						</article>
+						<article class="repas__card repas__card--3">
+							<h2>Homard et espuma de potiron</h2>
+							<p>
+								Mariné aux zestes d'orange
+							</p>
+							<div class="repas__card__prix">
+								20€
+							</div>
+						</article>
+						<article class="repas__card repas__card--4">
+							<h2>Foie gras de canard cuit entier</h2>
+							<p>
+								Confiture de figue et pain toasté
+							</p>
+							<div class="repas__card__prix">
+								35€
+							</div>
+						</article>
+					</div>
+				</div>
+				<div class="repas__container--withtitles">
+					<h4 class="repas__categorie_plat">PLATS</h4>
+					<div class="repas__container">
+						<article class="repas__card repas__card--5">
+							<h2>Noix de coquilles Saint-Jacques</h2>
+							<p>
+								Sur lit de purée de céleri-rave
+							</p>
+							<div class="repas__card__prix">
+								40€
+							</div>
+						</article>
+						<article class="repas__card repas__card--6">
+							<h2>Langoustine poêlée</h2>
+							<p>
+								Purée de patate douce
+							</p>
+							<div class="repas__card__prix">
+								35€
+							</div>
+						</article>
+						<article class="repas__card repas__card--7">
+							<h2>Mijoté de queue de boeuf</h2>
+							<p>
+								Et riz sauvage aux zestes de citron
+							</p>
+							<div class="repas__card__prix">
+								44€
+							</div>
+						</article>
+					</div>
+				</div>
+				<div class="repas__container--withtitles">
+					<h4 class="repas__categorie_plat">DESSERTS</h4>
+					<div class="repas__container">
+						<article class="repas__card repas__card--8">
+							<h2>Macaron noisette et chocolat</h2>
+							<p>
+								Glace au caramel brun et sel de Guérande
+							</p>
+							<div class="repas__card__prix">
+								18€
+							</div>
+						</article>
+						<article class="repas__card repas__card--9">
+							<h2>Baba au rhum revisité</h2>
+							<p>
+								Avec son coulis de citron
+							</p>
+							<div class="repas__card__prix">
+								22€
+							</div>
+						</article>
+						<article class="repas__card repas__card--10">
+							<h2>Tarte au citron meringuée</h2>
+							<p>
+								Déstructurée
+							</p>
+							<div class="repas__card__prix">
+								23€
+							</div>
+						</article>
+					</div>
+				</div>
 			</div>
 			<button type="button">Commander</button>
-            </section>
-		</main>
-		<footer>
-			<h1>ohmyfood</h1>
-			<ul>
-				<li><i class="icon fa-solid fa-utensils"></i>Proposer un restaurant</li>
-				<li><i class="icon fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
-				<li>Mentions légales</li>
-				<li><a href="mailto:">Contact</a></li>
-			</ul>
-		</footer>
-	</body>
+		</section>
+	</main>
+	<footer>
+		<h1>ohmyfood</h1>
+		<ul>
+			<li><i class="icon fa-solid fa-utensils"></i>Proposer un restaurant</li>
+			<li><i class="icon fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
+			<li>Mentions légales</li>
+			<li><a href="mailto:">Contact</a></li>
+		</ul>
+	</footer>
+</body>
+
 </html>
