Ajout animation sélection plats

--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -31,40 +31,52 @@
 					<h4 class="repas__categorie_plat">ENTRÉES</h4>
 					<div class="repas__container">
 						<article class="repas__card repas__card--1">
-							<h2>Ravioles de foie gras</h2>
-							<p>
-								Accompagnés de leur crème à la truffe
-							</p>
+							<div class="repas__card__text">
+								<h2>Ravioles de foie gras</h2>
+								<p>
+									Accompagnés de leur crème à la truffe
+								</p>
+							</div>
 							<div class="repas__card__prix">
 								25€
 							</div>
+							<i class="fa-solid fa-check"></i>
 						</article>
 						<article class="repas__card repas__card--2">
-							<h2>Caviar osciètre</h2>
-							<p>
-								Sur blini à la farine de blé noir
-							</p>
+							<div class="repas__card__text">
+								<h2>Caviar osciètre</h2>
+								<p>
+									Sur blini à la farine de blé noir
+								</p>
+							</div>
 							<div class="repas__card__prix">
 								35€
 							</div>
+							<i class="fa-solid fa-check"></i>
 						</article>
 						<article class="repas__card repas__card--3">
-							<h2>Homard et espuma de potiron</h2>
-							<p>
-								Mariné aux zestes d'orange
-							</p>
+							<div class="repas__card__text">
+								<h2>Homard et espuma de potiron</h2>
+								<p>
+									Mariné aux zestes d'orange
+								</p>
+							</div>
 							<div class="repas__card__prix">
 								20€
 							</div>
+							<i class="fa-solid fa-check"></i>
 						</article>
 						<article class="repas__card repas__card--4">
-							<h2>Foie gras de canard cuit entier</h2>
-							<p>
-								Confiture de figue et pain toasté
-							</p>
+							<div class="repas__card__text">
+								<h2>Foie gras de canard cuit entier</h2>
+								<p>
+									Confiture de figue et pain toasté
+								</p>
+							</div>
 							<div class="repas__card__prix">
 								35€
 							</div>
+							<i class="fa-solid fa-check"></i>
 						</article>
 					</div>
 				</div>
@@ -72,31 +84,40 @@
 					<h4 class="repas__categorie_plat">PLATS</h4>
 					<div class="repas__container">
 						<article class="repas__card repas__card--5">
-							<h2>Noix de coquilles Saint-Jacques</h2>
-							<p>
-								Sur lit de purée de céleri-rave
-							</p>
+							<div class="repas__card__text">
+								<h2>Noix de coquilles Saint-Jacques</h2>
+								<p>
+									Sur lit de purée de céleri-rave
+								</p>
+							</div>
 							<div class="repas__card__prix">
 								40€
 							</div>
+							<i class="fa-solid fa-check"></i>
 						</article>
 						<article class="repas__card repas__card--6">
-							<h2>Langoustine poêlée</h2>
-							<p>
-								Purée de patate douce
-							</p>
+							<div class="repas__card__text">
+								<h2>Langoustine poêlée</h2>
+								<p>
+									Purée de patate douce
+								</p>
+							</div>
 							<div class="repas__card__prix">
 								35€
 							</div>
+							<i class="fa-solid fa-check"></i>
 						</article>
 						<article class="repas__card repas__card--7">
-							<h2>Mijoté de queue de boeuf</h2>
-							<p>
-								Et riz sauvage aux zestes de citron
-							</p>
+							<div class="repas__card__text">
+								<h2>Mijoté de queue de boeuf</h2>
+								<p>
+									Et riz sauvage aux zestes de citron
+								</p>
+							</div>
 							<div class="repas__card__prix">
 								44€
 							</div>
+							<i class="fa-solid fa-check"></i>
 						</article>
 					</div>
 				</div>
@@ -104,31 +125,40 @@
 					<h4 class="repas__categorie_plat">DESSERTS</h4>
 					<div class="repas__container">
 						<article class="repas__card repas__card--8">
-							<h2>Macaron noisette et chocolat</h2>
-							<p>
-								Glace au caramel brun et sel de Guérande
-							</p>
+							<div class="repas__card__text">
+								<h2>Macaron noisette et chocolat</h2>
+								<p>
+									Glace au caramel brun et sel de Guérande
+								</p>
+							</div>
 							<div class="repas__card__prix">
 								18€
 							</div>
+							<i class="fa-solid fa-check"></i>
 						</article>
 						<article class="repas__card repas__card--9">
-							<h2>Baba au rhum revisité</h2>
-							<p>
-								Avec son coulis de citron
-							</p>
+							<div class="repas__card__text">
+								<h2>Baba au rhum revisité</h2>
+								<p>
+									Avec son coulis de citron
+								</p>
+							</div>
 							<div class="repas__card__prix">
 								22€
 							</div>
+							<i class="fa-solid fa-check"></i>
 						</article>
 						<article class="repas__card repas__card--10">
-							<h2>Tarte au citron meringuée</h2>
-							<p>
-								Déstructurée
-							</p>
+							<div class="repas__card__text">
+								<h2>Tarte au citron meringuée</h2>
+								<p>
+									Déstructurée
+								</p>
+							</div>
 							<div class="repas__card__prix">
 								23€
 							</div>
+							<i class="fa-solid fa-check"></i>
 						</article>
 					</div>
 				</div>
