--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -31,31 +31,40 @@
 					<h4 class="repas__categorie_plat">ENTRÉES</h4>
 					<div class="repas__container">
 						<article class="repas__card repas__card--1">
-							<h2>Tartare de thon</h2>
-							<p>
-								Assaisonné au yuzu
-							</p>
+							<div class="repas__card__text">
+								<h2>Tartare de thon</h2>
+								<p>
+									Assaisonné au yuzu
+								</p>
+							</div>
 							<div class="repas__card__prix">
 								25€
 							</div>
+							<i class="fa-solid fa-check"></i>
 						</article>
 						<article class="repas__card repas__card--2">
-							<h2>Bouchée de homard croustillant</h2>
-							<p>
-								Et sa farandole de petits légumes
-							</p>
+							<div class="repas__card__text">
+								<h2>Bouchée de homard croustillant</h2>
+								<p>
+									Et sa farandole de petits légumes
+								</p>
+							</div>
 							<div class="repas__card__prix">
 								35€
 							</div>
+							<i class="fa-solid fa-check"></i>
 						</article>
 						<article class="repas__card repas__card--3">
-							<h2>Velouté de cèpes</h2>
-							<p>
-								Aux truffes
-							</p>
+							<div class="repas__card__text">
+								<h2>Velouté de cèpes</h2>
+								<p>
+									Aux truffes
+								</p>
+							</div>
 							<div class="repas__card__prix">
 								20€
 							</div>
+							<i class="fa-solid fa-check"></i>
 						</article>
 					</div>
 				</div>
@@ -63,31 +72,40 @@
 					<h4 class="repas__categorie_plat">PLATS</h4>
 					<div class="repas__container">
 						<article class="repas__card repas__card--4">
-							<h2>Poulet rôti aux herbes de Provence</h2>
-							<p>
-								Et sa crème de truffe
-							</p>
+							<div class="repas__card__text">
+								<h2>Poulet rôti aux herbes de Provence</h2>
+								<p>
+									Et sa crème de truffe
+								</p>
+							</div>
 							<div class="repas__card__prix">
 								40€
 							</div>
+							<i class="fa-solid fa-check"></i>
 						</article>
 						<article class="repas__card repas__card--5">
-							<h2>Langouste rôtie</h2>
-							<p>
-								Et ses légumes de saison
-							</p>
+							<div class="repas__card__text">
+								<h2>Langouste rôtie</h2>
+								<p>
+									Et ses légumes de saison
+								</p>
+							</div>
 							<div class="repas__card__prix">
 								35€
 							</div>
+							<i class="fa-solid fa-check"></i>
 						</article>
 						<article class="repas__card repas__card--6">
-							<h2>Côte de boeuf Angus</h2>
-							<p>
-								Et sa purée de panais
-							</p>
+							<div class="repas__card__text">
+								<h2>Côte de boeuf Angus</h2>
+								<p>
+									Et sa purée de panais
+								</p>
+							</div>
 							<div class="repas__card__prix">
 								44€
 							</div>
+							<i class="fa-solid fa-check"></i>
 						</article>
 					</div>
 				</div>
@@ -95,31 +113,40 @@
 					<h4 class="repas__categorie_plat">DESSERTS</h4>
 					<div class="repas__container">
 						<article class="repas__card repas__card--7">
-							<h2>Farandole de desserts</h2>
-							<p>
-								Du chef
-							</p>
+							<div class="repas__card__text">
+								<h2>Farandole de desserts</h2>
+								<p>
+									Du chef
+								</p>
+							</div>
 							<div class="repas__card__prix">
 								18€
 							</div>
+							<i class="fa-solid fa-check"></i>
 						</article>
 						<article class="repas__card repas__card--8">
-							<h2>Crème brulée</h2>
-							<p>
-								Revisitée
-							</p>
+							<div class="repas__card__text">
+								<h2>Crème brulée</h2>
+								<p>
+									Revisitée
+								</p>
+							</div>
 							<div class="repas__card__prix">
 								22€
 							</div>
+							<i class="fa-solid fa-check"></i>
 						</article>
 						<article class="repas__card repas__card--9">
-							<h2>Tiramisu</h2>
-							<p>
-								À la noisette
-							</p>
+							<div class="repas__card__text">
+								<h2>Tiramisu</h2>
+								<p>
+									À la noisette
+								</p>
+							</div>
 							<div class="repas__card__prix">
 								23€
 							</div>
+							<i class="fa-solid fa-check"></i>
 						</article>
 					</div>
 				</div>
