--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -27,102 +27,129 @@
 				<i class="icon icon-heart--gradient fa-solid fa-heart"></i>
 			</div>
 			<div class="repas__container_all">
-			<div class="repas__container--withtitles">
-				<h4 class="repas__categorie_plat">ENTRÉES</h4>
-				<div class="repas__container">
-					<article class="repas__card repas__card--1">
-						<h2>Tartare de poulpe acidulé</h2>
-						<p>
-							Aux zests d'orange
-						</p>
-						<div class="repas__card__prix">
-							25€
-						</div>
-					</article>
-					<article class="repas__card repas__card--2">
-						<h2>Velouté de légumes d'antan</h2>
-						<p>
-							Carotte, panais, topinambour
-						</p>
-						<div class="repas__card__prix">
-							35€
-						</div>
-					</article>
-					<article class="repas__card repas__card--3">
-						<h2>Soupe à l'oignon</h2>
-						<p>
-							Revisitée
-						</p>
-						<div class="repas__card__prix">
-							20€
-						</div>
-					</article>
+				<div class="repas__container--withtitles">
+					<h4 class="repas__categorie_plat">ENTRÉES</h4>
+					<div class="repas__container">
+						<article class="repas__card repas__card--1">
+							<div class="repas__card__text">
+								<h2>Tartare de poulpe acidulé</h2>
+								<p>
+									Aux zests d'orange
+								</p>
+							</div>
+							<div class="repas__card__prix">
+								25€
+							</div>
+							<i class="fa-solid fa-check"></i>
+						</article>
+						<article class="repas__card repas__card--2">
+							<div class="repas__card__text">
+								<h2>Velouté de légumes d'antan</h2>
+								<p>
+									Carotte, panais, topinambour
+								</p>
+							</div>
+							<div class="repas__card__prix">
+								35€
+							</div>
+							<i class="fa-solid fa-check"></i>
+						</article>
+						<article class="repas__card repas__card--3">
+							<div class="repas__card__text">
+								<h2>Soupe à l'oignon</h2>
+								<p>
+									Revisitée
+								</p>
+							</div>
+							<div class="repas__card__prix">
+								20€
+							</div>
+							<i class="fa-solid fa-check"></i>
+						</article>
+					</div>
 				</div>
-			</div>
-			<div class="repas__container--withtitles">
-				<h4 class="repas__categorie_plat">PLATS</h4>
-				<div class="repas__container">
-					<article class="repas__card repas__card--4">
-						<h2>Coquilles Saint-Jacques</h2>
-						<p>
-							Accompagnées d'une purée de panais
-						</p>
-						<div class="repas__card__prix">
-							40€
-						</div>
-					</article>
-					<article class="repas__card repas__card--5">
-						<h2>Magret de canard</h2>
-						<p>
-							Et parmentier de pommes de terre
-						</p>
-						<div class="repas__card__prix">
-							35€
-						</div>
-					</article>
-					<article class="repas__card repas__card--6">
-						<h2>Pigeonneau d’Ille-et-Vilaine</h2>
-						<p>
-							Sur son lit de gnocchis aux légumes
-						</p>
-						<div class="repas__card__prix">
-							44€
-						</div>
-					</article>
+				<div class="repas__container--withtitles">
+					<h4 class="repas__categorie_plat">PLATS</h4>
+					<div class="repas__container">
+						<article class="repas__card repas__card--4">
+							<div class="repas__card__text">
+								<h2>Coquilles Saint-Jacques</h2>
+								<p>
+									Accompagnées d'une purée de panais
+								</p>
+							</div>
+							<div class="repas__card__prix">
+								40€
+							</div>
+							<i class="fa-solid fa-check"></i>
+						</article>
+						<article class="repas__card repas__card--5">
+							<div class="repas__card__text">
+								<h2>Magret de canard</h2>
+								<p>
+									Et parmentier de pommes de terre
+								</p>
+							</div>
+							<div class="repas__card__prix">
+								35€
+							</div>
+							<i class="fa-solid fa-check"></i>
+						</article>
+						<article class="repas__card repas__card--6">
+							<div class="repas__card__text">
+								<h2>Pigeonneau d’Ille-et-Vilaine</h2>
+								<p>
+									Sur son lit de gnocchis aux légumes
+								</p>
+							</div>
+							<div class="repas__card__prix">
+								44€
+							</div>
+							<i class="fa-solid fa-check"></i>
+						</article>
+					</div>
 				</div>
-			</div>
-			<div class="repas__container--withtitles">
-				<h4 class="repas__categorie_plat">DESSERTS</h4>
-				<div class="repas__container">
-					<article class="repas__card repas__card--7">
-						<h2>Pétales de violettes glacés</h2>
-						<p>
-							Et purée de noisettes
-						</p>
-						<div class="repas__card__prix">
-							18€
-						</div>
-					</article>
-					<article class="repas__card repas__card--8">
-						<h2>Fondant au chocolat</h2>
-						<p>
-							Revisité
-						</p>
-						<div class="repas__card__prix">
-							22€
-						</div>
-					</article>
-					<article class="repas__card repas__card--9">
-						<h2>Millefeuille croustillant</h2>
-						<p>
-							Myrtilles et pâte d’amande
-						</p>
-						<div class="repas__card__prix">
-							23€
-						</div>
-					</article>
+				<div class="repas__container--withtitles">
+					<h4 class="repas__categorie_plat">DESSERTS</h4>
+					<div class="repas__container">
+						<article class="repas__card repas__card--7">
+							<div class="repas__card__text">
+								<h2>Pétales de violettes glacés</h2>
+								<p>
+									Et purée de noisettes
+								</p>
+							</div>
+							<div class="repas__card__prix">
+								18€
+							</div>
+							<i class="fa-solid fa-check"></i>
+						</article>
+						<article class="repas__card repas__card--8">
+							<div class="repas__card__text">
+								<h2>Fondant au chocolat</h2>
+								<p>
+									Revisité
+								</p>
+							</div>
+							<div class="repas__card__prix">
+								22€
+							</div>
+							<i class="fa-solid fa-check"></i>
+						</article>
+						<article class="repas__card repas__card--9">
+							<div class="repas__card__text">
+								<h2>Millefeuille croustillant</h2>
+								<p>
+									Myrtilles et pâte d’amande
+								</p>
+							</div>
+							<div class="repas__card__prix">
+								23€
+							</div>
+							<i class="fa-solid fa-check"></i>
+						</article>
+					</div>
 				</div>
-			</div>
 			</div>
 			<button type="button">
 				Commander
