--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -31,95 +31,122 @@
 					<h4 class="repas__categorie_plat">ENTRÉES</h4>
 					<div class="repas__container">
 						<article class="repas__card repas__card--1">
-							<h2>Fricassée d'escargot</h2>
-							<p>
-								Au piment d'Espelette
-							</p>
+							<div class="repas__card__text">
+								<h2>Fricassée d'escargot</h2>
+								<p>
+									Au piment d'Espelette
+								</p>
+							</div>
 							<div class="repas__card__prix">
 								25€
 							</div>
+							<i class="fa-solid fa-check"></i>
 						</article>
 						<article class="repas__card repas__card--2">
-							<h2>Foie gras de canard mi-cuit</h2>
-							<p>
-								Et ses copeaux de truffe noire
-							</p>
+							<div class="repas__card__text">
+								<h2>Foie gras de canard mi-cuit</h2>
+								<p>
+									Et ses copeaux de truffe noire
+								</p>
+							</div>
 							<div class="repas__card__prix">
 								35€
 							</div>
+							<i class="fa-solid fa-check"></i>
 						</article>
 						<article class="repas__card repas__card--3">
-							<h2>Oeuf au plat</h2>
-							<p>
-								Assaisonné à la truffe sur lit de caviar
-							</p>
+							<div class="repas__card__text">
+								<h2>Oeuf au plat</h2>
+								<p>
+									Assaisonné à la truffe sur lit de caviar
+								</p>
+							</div>
 							<div class="repas__card__prix">
 								20€
 							</div>
+							<i class="fa-solid fa-check"></i>
 						</article>
 					</div>
 				</div>
 				<div class="repas__container--withtitles">
 					<h4 class="repas__categorie_plat">PLATS</h4>
 					<div class="repas__container">
-						<article class="repas__card repas__card--1">
-							<h2>Filet de boeuf aux herbes</h2>
-							<p>
-								Accompagné de sa ribambelle de légumes
-							</p>
+						<article class="repas__card repas__card--4">
+							<div class="repas__card__text">
+								<h2>Filet de boeuf aux herbes</h2>
+								<p>
+									Accompagné de sa ribambelle de légumes
+								</p>
+							</div>
 							<div class="repas__card__prix">
 								40€
 							</div>
+							<i class="fa-solid fa-check"></i>
 						</article>
-						<article class="repas__card repas__card--2">
-							<h2>Parmentier de queue de boeuf</h2>
-							<p>
-								À la truffe noire sur sa purée de panais
-							</p>
+						<article class="repas__card repas__card--5">
+							<div class="repas__card__text">
+								<h2>Parmentier de queue de boeuf</h2>
+								<p>
+									À la truffe noire sur sa purée de panais
+								</p>
+							</div>
 							<div class="repas__card__prix">
 								35€
 							</div>
+							<i class="fa-solid fa-check"></i>
 						</article>
-						<article class="repas__card repas__card--3">
-							<h2>Filet de turbot</h2>
-							<p>
-								Aux agrumes
-							</p>
+						<article class="repas__card repas__card--6">
+							<div class="repas__card__text">
+								<h2>Filet de turbot</h2>
+								<p>
+									Aux agrumes
+								</p>
+							</div>
 							<div class="repas__card__prix">
 								44€
 							</div>
+							<i class="fa-solid fa-check"></i>
 						</article>
 					</div>
 				</div>
 				<div class="repas__container--withtitles">
 					<h4 class="repas__categorie_plat">DESSERTS</h4>
 					<div class="repas__container">
-						<article class="repas__card repas__card--4">
-							<h2>Paris-Brest</h2>
-							<p>
-								Revisité
-							</p>
+						<article class="repas__card repas__card--7">
+							<div class="repas__card__text">
+								<h2>Paris-Brest</h2>
+								<p>
+									Revisité
+								</p>
+							</div>
 							<div class="repas__card__prix">
 								18€
 							</div>
+							<i class="fa-solid fa-check"></i>
 						</article>
-						<article class="repas__card repas__card--5">
-							<h2>Macaron au chocolat d'exception</h2>
-							<p>
-								Et glace à la vanille de Madagascar
-							</p>
+						<article class="repas__card repas__card--8">
+							<div class="repas__card__text">
+								<h2>Macaron au chocolat d'exception</h2>
+								<p>
+									Et glace à la vanille de Madagascar
+								</p>
+							</div>
 							<div class="repas__card__prix">
 								22€
 							</div>
+							<i class="fa-solid fa-check"></i>
 						</article>
-						<article class="repas__card repas__card--6">
-							<h2>Mousse au chocolat</h2>
-							<p>
-								Au piment d'Espelette et à la truffe noire
-							</p>
+						<article class="repas__card repas__card--9">
+							<div class="repas__card__text">
+								<h2>Mousse au chocolat</h2>
+								<p>
+									Au piment d'Espelette et à la truffe noire
+								</p>
+							</div>
 							<div class="repas__card__prix">
 								23€
 							</div>
+							<i class="fa-solid fa-check"></i>
 						</article>
 					</div>
 				</div>
