Correction hiérarchie balises titres index et footer

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         </div>
         <div class="container_description_fonctionnement">
             <section id="description_ohmyfood">
-                <h2>
+                <h1 id="description_ohmyfood__titre">
                     Réservez le menu qui vous convient
-                </h2>
+                </h1>
                 <p>
                     Découvrez des restaurants d'exception, sélectionnés par nos soins.
                 </p>
@@ -157,9 +157,9 @@
         </section>
     </main>
     <footer>
-        <h1>
+        <h4>
             ohmyfood
-        </h1>
+        </h4>
         <ul>
             <li><i class="icon fa-solid fa-utensils"></i>Proposer un restaurant</li>
             <li><i class="icon fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
